packages/@winglang/wingc/src/lsp/snapshots/completions/static_method_call.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: hello
  kind: 2
  detail: "preflight (): void"
  sortText: ff|hello
  insertText: hello()

